# OncoRAG

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: config.py
src/ingestion/: base_pipe.py
src/ingestion/celery/: app.py
src/ingestion/pubmed/: tasks.py
src/ingestion/pubmed/pipes/: fetch_article_pipe.py  start_session_pipe.py
src/ingestion/qdrant/: store_pipe.py  tasks.py
src/ingestion/s3/: client.py  exceptions.py
src/pubmed/: client.py  exceptions.py  models.py
src/qdrant/: client.py
