[project]
name = "oncorag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bio>=1.8.1",
    "biopython>=1.87",
    "boto3>=1.43.6",
    "celery[redis]>=5.6.3",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
    "qdrant-client>=1.17.1",
    "redis>=6.4.0",
    "xmltodict>=1.0.4",
]
